# matrix_polynomial_analysis

./: .gitignore  Cargo.toml  README.md  output.json  startup.json  startup.toml  test.txt
results/: 2x2matrices_5term_polynomial_100polynomial_mutations_1000000fuzzed  2x2matrices_5term_polynomial_10polynomial_mutations_100000fuzzed  2x2matrices_6term_polynomial_100polynomial_mutations_1000000fuzzed  2x2matrices_6term_polynomial_50polynomial_mutations_10000fuzzed  2x2matrices_9term_polynomial_50polynomial_mutations_100000fuzzed  3x3matrices_9term_polynomial_10polynomial_mutations_10000fuzzed  3x3matrices_9term_polynomial_50polynomial_mutations_100000fuzzed
src/: current_state.rs  fuzz_polynomial.rs  lib.rs  main.rs  matrix_generator.rs  polynomial.rs  polynomial_verifier.rs
tests/: lib_test.rs  polynomial_test.rs
