[package]
name = "matrix_polynomial_analysis"
version = "0.1.0"
authors = ["Ben Clark <thrinador1@gmail.com>"]
edition = "2018"

[profile.release]
lto = true
panic = "abort"

[dependencies]
nalgebra = { version = "0.30.1", features = ["rand"] }
itertools = "0.10.3"
rand = "0.8.5"
rand_distr = "0.4.3"
threadpool = "1.8.1"
env_logger = "0.9.0"
log = "0.4.16"